pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__056-thematic_breaks.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/056-thematic_breaks.md
---
[3m-[0m
